# bigdata

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/: settings.yml  sync-repo-settings.yml
.github/workflows/: ci.yml  probot-settings.yml
charts/: cat1_correlation_with_description.html  cat2_correlation_with_description.html  cat3_correlation_with_description.html
mercari/: .flake8  .gitignore  README.rst  mypy.ini  pyproject.toml
mercari/charts/: cat0_correlation_with_description.html  cat4_correlation_with_description.html
mercari/mercari/: __init__.py  cache.py  categoryProvider.py  data_provider.py  itemDescriptionProvider.py  main.py  workspace.code-workspace
mercari/mercari/bigquery/: bigquery.py  cache.py
mercari/tests/: test_mercari.py
src/mercari/: categoryProvider.py  data_provider.py  itemDescriptionProvider.py
src/mercari/bigquery/: bigquery.py  cache.py
