[tool.poetry]
name = "mercari"
version = "0.2.0"
description = ""
authors = ["rdss-zmehmedovic <zuhra.mehmedovic@rewe-digital.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair_viewer = "^0.3.0"
altair = "^4.1.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
selenium = "^3.141.0"
flake8-bandit = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-import-order = "^0.18.1"
nox = "^2020.8.22"
pytest = "^5.2"
safety = "^1.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
