[tool.poetry]
name = "mercari"
version = "0.1.0"
description = ""
authors = ["rdss-zmehmedovic <zuhra.mehmedovic@rewe-digital.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair_viewer = "^0.3.0"
altair = "^4.1.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
selenium = "^3.141.0"
google-cloud-bigquery = "^2.4.0"
pyarrow = "^2.0.0"
google-cloud-bigquery-storage = "^2.1.0"
nltk = "^3.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
