[tool.poetry]
name = "mercari"
version = "0.1.0"
description = ""
authors = ["rdss-zmehmedovic <zuhra.mehmedovic@rewe-digital.com>"]

[tool.poetry.dependencies]
python = "^3.8"
altair_viewer = "^0.3.0"
altair = "^4.1.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
selenium = "^3.141.0"
google-cloud-bigquery = "^2.4.0"
pyarrow = "^2.0.0"
google-cloud-bigquery-storage = "^2.1.0"
nltk = "^3.5"
sklearn = "^0.0"
pandas = "~1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.800"
isort = "^5.7.0"
black = "^20.8b1"

[tool.black]
line-length = 89

[tool.isort]
line_length = 89
force_single_line = true
force_grid_wrap = 0
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
skip_glob = ["*/setup.py"]
filter_files = true

[build-system]
requires = ["poetry>=1.0.0b1"]
build-backend = "poetry.masonry.api"
